--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Curso Profesional de JavaScript",
   "main": "./src/index.js",
   "scripts": {
-    "start": "live-server"
+    "start": "parcel index.html html/index.html html/**/*.html",
+    "start:live-server": "live-server"
   },
   "repository": {
     "type": "git",
@@ -19,5 +20,12 @@
   "bugs": {
     "url": "https://github.com/adonyssantos/platzi-javascript-profesional/issues"
   },
-  "homepage": "https://github.com/adonyssantos/platzi-javascript-profesional#readme"
+  "homepage": "https://github.com/adonyssantos/platzi-javascript-profesional#readme",
+  "devDependencies": {
+    "live-server": "^1.2.1",
+    "parcel-bundler": "^1.12.5"
+  },
+  "browserslist": [
+    "last 1 chrome version"
+  ]
 }
